--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-29 17:34+0000\n"
+"POT-Creation-Date: 2020-09-30 23:02+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -4337,6 +4337,11 @@ msgstr ""
 
 msgid "Retries call three times for the chosen interval"
 msgstr ""
+
+#, fuzzy
+#| msgid "Keyword"
+msgid "Keywords"
+msgstr "Palabra clave"
 
 #, python-format
 msgid "The following flows are still used by campaigns so could not be archived: %(flows)s"
