--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-29 17:34+0000\n"
+"POT-Creation-Date: 2020-09-30 23:02+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -4026,6 +4026,11 @@ msgstr ""
 
 msgid "Retries call three times for the chosen interval"
 msgstr ""
+
+#, fuzzy
+#| msgid "Keyword"
+msgid "Keywords"
+msgstr "Palavra-chave"
 
 #, python-format
 msgid "The following flows are still used by campaigns so could not be archived: %(flows)s"
