--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-01 17:58+0000\n"
+"POT-Creation-Date: 2020-10-02 16:06+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -4051,6 +4051,11 @@ msgstr ""
 
 msgid "Retries call three times for the chosen interval"
 msgstr ""
+
+#, fuzzy
+#| msgid "Keyword"
+msgid "Keywords"
+msgstr "Palavra-chave"
 
 #, python-format
 msgid "The following flows are still used by campaigns so could not be archived: %(flows)s"
