--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-02 17:44+0000\n"
+"POT-Creation-Date: 2020-10-09 18:26+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -7768,23 +7768,24 @@ msgstr ""
 
 msgid ""
 "\n"
-"    Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
+"  Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
 "\n"
-"  "
 msgstr ""
 
 msgid ""
 "\n"
-"    In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
-"    the contacts on the WhatsApp application. This may take a few minutes.\n"
+"  In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
+"  the contacts on the WhatsApp application. This may take a few minutes.\n"
 "\n"
-"  "
 msgstr ""
 
 #, fuzzy
 #| msgid "Has Template Error"
 msgid "WhatsApp Templates Events"
 msgstr "Possui erro no modelo"
+
+msgid "No syncs yet. Check back later."
+msgstr ""
 
 #, fuzzy
 msgid "Templates"
