--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-02 17:44+0000\n"
+"POT-Creation-Date: 2020-10-09 18:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5750,20 +5750,21 @@ msgstr ""
 
 msgid ""
 "\n"
-"    Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
+"  Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
 "\n"
-"  "
 msgstr ""
 
 msgid ""
 "\n"
-"    In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
-"    the contacts on the WhatsApp application. This may take a few minutes.\n"
+"  In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
+"  the contacts on the WhatsApp application. This may take a few minutes.\n"
 "\n"
-"  "
 msgstr ""
 
 msgid "WhatsApp Templates Events"
+msgstr ""
+
+msgid "No syncs yet. Check back later."
 msgstr ""
 
 msgid "Templates"
