--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-09 18:26+0000\n"
+"POT-Creation-Date: 2020-10-09 19:16+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -6958,10 +6958,7 @@ msgstr ""
 #| "    Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
 #| "\n"
 #| "  "
-msgid ""
-"\n"
-"  Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
-"\n"
+msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
 msgstr ""
 "\n"
 "    Votre canal WhatsApp est maintenant connecté, vous devriez pouvoir envoyer et recevoir des messages normalement.\n"
@@ -6975,11 +6972,7 @@ msgstr ""
 #| "    the contacts on the WhatsApp application. This may take a few minutes.\n"
 #| "\n"
 #| "  "
-msgid ""
-"\n"
-"  In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
-"  the contacts on the WhatsApp application. This may take a few minutes.\n"
-"\n"
+msgid "In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh the contacts on the WhatsApp application. This may take a few minutes."
 msgstr ""
 "\n"
 "    Dans le cas d'une nouvelle installation WhatsApp ou du remplacement d'un canal WhatsApp existant, vous devrez peut-être actualiser\n"
