--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-09 18:26+0000\n"
+"POT-Creation-Date: 2020-10-09 19:16+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -8397,17 +8397,11 @@ msgstr ""
 msgid "<div class='code mt-4'> Manage > API Usage > Callback API > Server Settings </div> <div class='mt-2'> Enter the Webhook URL below for the <div class='code inline py-1'>URL</div> field and the Verify Token in the <div class='code inline py-1'>Secret Key</div> field. </div> <div class='code mt-6'> Manage > API Usage > Callback API > Event Types </div> <div class='mt-2'> Check the option %(option)s </div>"
 msgstr ""
 
-msgid ""
-"\n"
-"  Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
-"\n"
-msgstr ""
+#, fuzzy
+msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
+msgstr "TextIt usa su teléfono Android para enviar y recibir mensajes."
 
-msgid ""
-"\n"
-"  In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
-"  the contacts on the WhatsApp application. This may take a few minutes.\n"
-"\n"
+msgid "In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh the contacts on the WhatsApp application. This may take a few minutes."
 msgstr ""
 
 #, fuzzy
