--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-09 18:26+0000\n"
+"POT-Creation-Date: 2020-10-09 19:16+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -6921,10 +6921,7 @@ msgstr ""
 #| "    Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
 #| "\n"
 #| "  "
-msgid ""
-"\n"
-"  Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
-"\n"
+msgid "Your WhatsApp channel is now connected, you should be able to send and receive messages as normal."
 msgstr ""
 "\n"
 "    Теперь Ваш канал WhatsApp подключен, Вы можете отправлять и получать сообщения в нормальном режиме.\n"
@@ -6938,11 +6935,7 @@ msgstr ""
 #| "    the contacts on the WhatsApp application. This may take a few minutes.\n"
 #| "\n"
 #| "  "
-msgid ""
-"\n"
-"  In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh\n"
-"  the contacts on the WhatsApp application. This may take a few minutes.\n"
-"\n"
+msgid "In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh the contacts on the WhatsApp application. This may take a few minutes."
 msgstr ""
 "\n"
 "    В случае новой установки WhatsApp или замены существующего канала WhatsApp Вам может потребоваться обновить \n"
